# plotkarzyna

./: README.md  dataset_tests.ipynb  eval.ipynb  predict.ipynb  predict.py  pyproject.toml  setup.cfg  test_predict.ipynb  train_hh.py
plotkarzyna/: config.py  dataset.py  decode.py  model.py  tutorial.ipynb  utils.py
python_template/: config.py  config.yaml
