[tool.poetry]
name = "plotkarzyna"
version = "0.1.0"
description = ""
authors = ["Karol Saputa <karol.saputa@gmail.com>"]
readme = "README.md"
packages = [{include = "plotkarzyna"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
build = "^0.10.0"
coref-ds = {git="https://github.com/ipipan/coref-ds.git"}
torch = {version = ">=2.0.0"}
transformers = "^4.31.0"
wandb = "^0.15.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
