[metadata]
name = python-template
version = 0.1.0
author = Karol Saputa
description = python-template
long_description = python-template
url = https://github.com/k-sap/python-template
keywords = 
[options]
python_requires = >=3.7, <4
install_requires =

[options.extras_require]
test =
    pytest
    coverage
[options.package_data]
yaml_config =
    config.yaml